--- a/src/app/secciones/programacion/programacion.component.css
+++ b/src/app/secciones/programacion/programacion.component.css
@@ -1,6 +1,7 @@
 * {
   margin:0 px;
   padding:0 px;
+  font-family: 'Poppins bold', sans-serif;
 }
 
 .contenido_derecha{
@@ -8,10 +9,8 @@
 }
 
 .izquierda{
-
   display:flex;
   justify-content: center;
-
   height: 100vh;
   width: 50%;
   margin-left: 500px;
@@ -33,20 +32,25 @@
 .parrafo{
   text-align: justify;
   margin: 2%;
+  font-weight: normal;
+}
+
+.titulos{
+  font-weight: bolder;
 }
 
 #pantalla{
   display:flex;
   justify-content: space-between;
-  font-family: 'Poppins bold', sans-serif;
+  font-family: 'Poppins bold', sans-serif
 }
 
 .cuadricula{
-
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: start;
+ 
 }
 .proyectos{
   text-align: center;
@@ -64,6 +68,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  margin-left: 0.5%;
 }
 /*.icono{
   border-left: 10px;
@@ -78,8 +83,16 @@
   width: 65%;
 }
 
+.item{
+  Display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+}
 .item p{
   text-align: center;
+  font-family: 'Poppins', sans-serif
 }
 .scroll {
   display: block;
@@ -90,6 +103,17 @@
   height: 400px;
   overflow-y: scroll;
 }
+
+.descripcion_Seccion{
+  font-weight: normal;
+}
+
+h1 h3 {
+  color: red;
+  font-weight: bolder;
+}
+
+
 
 /*-----------------------------------------------Estilos Modales------------------------------------------*/
 
@@ -114,6 +138,11 @@
   border-radius: 20px;
   color:#fff;
 }
+.infoArchivos{
+  background-color: rgba(0,0,0,0.5);
+  color:#fff;
+  width: 80%;
+}
 .Buscar{
   display:flex;
   justify-content: space-between;
@@ -134,6 +163,16 @@
 .modal-content{
  background-color: #5679a6;
 }
+
+.txt-negro{
+  color:black;
+}
+
+video{
+  width:80%;
+
+}
+
 /*--------------------------------------------------Editar-----------------------------------------------*/
 
 
@@ -158,7 +197,10 @@
 
 .modal-content{
   border-radius: 5%;
+  
 }
+
+
 /*--------------------------------------------------Responsive----------------------------------------------*/
 /* Extra small devices (phones, 600px and down)*/
 @media only screen and (max-width: 600px) {
