--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -39,6 +39,8 @@
 }
 
 #pantalla{
+  height: 100vh;
+width: 100%;
   display:flex;
   justify-content: space-between;
   font-family: 'Poppins bold', sans-serif
@@ -238,6 +240,14 @@ video{
    
    }
 
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -276,6 +286,14 @@ video{
     height: auto;
    
    }
+
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
 
 }
 
@@ -316,6 +334,14 @@ video{
    
    }
 
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
+
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -355,6 +381,14 @@ video{
    
    }
 
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
+
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -393,6 +427,14 @@ video{
     height: auto;
    
    }
+
+   #pantalla{
+    height: 100vh;
+    width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
   
 }
 
