--- a/src/app/secciones/programacion/programacion.component.css
+++ b/src/app/secciones/programacion/programacion.component.css
@@ -21,7 +21,7 @@
  background-size: cover;
  background-position: center;
  width: 50%;
- height: auto;
+ height: 100%;
 
 }
 
@@ -40,6 +40,8 @@
 }
 
 #pantalla{
+  height: 100vh;
+  width: 100%;
   display:flex;
   justify-content: space-between;
   font-family: 'Poppins bold', sans-serif
@@ -235,7 +237,7 @@ video{
     background-size: cover;
     background-position: center;
     width: 70%;
-    height: auto;
+    height:100%;
    
    }
 
@@ -274,9 +276,16 @@ video{
     background-size: cover;
     background-position: center;
     width: 70%;
-    height: auto;
-   
+    height: 100%;
    }
+
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
 
 }
 
@@ -313,9 +322,17 @@ video{
     background-size: cover;
     background-position: center;
     width: 70%;
-    height: auto;
+    height: 100%;
    
    }
+
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
 
 }
 
@@ -352,9 +369,17 @@ video{
     background-size: cover;
     background-position: center;
     width: 50%;
-    height: auto;
+    height: 100%;
    
    }
+
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
 
 }
 
@@ -391,9 +416,17 @@ video{
     background-size: cover;
     background-position: center;
     width: 50%;
-    height: auto;
+    height: 100%;
    
    }
+
+   #pantalla{
+    height: 100vh;
+  width: 100%;
+    display:flex;
+    justify-content: space-between;
+    font-family: 'Poppins bold', sans-serif
+  }
   
 }
 
