--- a/src/app/secciones/animacion/animacion.component.css
+++ b/src/app/secciones/animacion/animacion.component.css
@@ -389,6 +389,15 @@ video{
     font-family: 'Poppins bold', sans-serif
   }
 
+  .scroll {
+    display: block;
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 600px;
+    overflow-y: scroll;
+  }
+
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -434,6 +443,16 @@ video{
     display:flex;
     justify-content: space-between;
     font-family: 'Poppins bold', sans-serif
+  }
+
+  
+  .scroll {
+    display: block;
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    height: 600px;
+    overflow-y: scroll;
   }
   
 }
