--- a/src/app/secciones/foro/usuarios/usuarios.component.html
+++ b/src/app/secciones/foro/usuarios/usuarios.component.html
@@ -4,26 +4,26 @@
             <div class="card-body">
                 <form class="row">
                     <div class="form-group mt-4 col-6">
-                      <form (ngSubmit)="buscarUsuarioenLista()" [formGroup]="buscarUsuarioForm"> 
-                        <input type="text" class="form-control form-control-lg col-11" aria-label="username"
+                      <!--<form (ngSubmit)="buscarUsuarioenLista()" [formGroup]="buscarUsuarioForm"> 
+                        <input type="text" class="form-control form-control-lg col-11"  [(ngModel)]="buscarUsuario"
                         placeholder="Username" formControlName="nombreusuario">
-                      </form>
+                      </form>-->
+                      <input type="text" class="form-control col-11"  placeholder="Buscar Usuario" [(ngModel)]="buscarUsuario" name="first">
+                      
                     </div>
 
                     <div class="col-6 mt-5">
                       <div class="container "> 
                         <div class="row d-flex justify-content-around">
-                         <form (ngSubmit)="buscarUsuarioenLista()" [formGroup]="buscarUsuarioForm">
-                          <button  type="submit" class="btn btn-primary btn-redo "> Buscar </button>
-                         </form>
-                          <button (click)="verTodosUsuarios()" type="button" class="btn btn-primary btn-redo "> Ver todos </button>
+                         <button  type="button" (click)="buscarUsuarioenLista()" class="btn btn-primary btn-redo ">Buscar</button>
+                          <button (click)="verTodosUsuarios()" type="button" class="btn btn-primary btn-redo ">Ver todos</button>
                         </div>
                       </div>
                     </div>
 
                 </form>
 
-                <div class="row mt-5">
+                <div *ngIf="!sebuscoUsuario" class="row mt-5">
                   <table  class="table col-10">
                     <thead>
                       <tr>
@@ -47,7 +47,32 @@
                   
                     </tbody>
                 </table>                       
-            
+                </div>
+
+                <div *ngIf="sebuscoUsuario" class="row mt-5">
+                  <table  class="table col-10">
+                    <thead>
+                      <tr>
+                      <th scope="col">#</th>
+                        <th scope="col">Nombre Usuario</th>
+                        <th scope="col">Numero de Reportes</th>
+                        <th scope="col">Bloquear</th>
+                        <th scope="col"> Eliminar</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr  *ngFor= "let item of usuarioBuscado$ | async;let i = index">
+                        <th scope="row">{{i}}</th>
+                        <td>{{nombre_usuarioUB}} </td>
+                        <td>{{n_reportesUB}}</td>
+                        <td *ngIf="!item.block">  <button  (click)="bloquearUsuario(item.email)" class="btn btn-primary btn-sm btn-redo"> Bloquear</button> </td>
+                        <td *ngIf="item.block">  <button  (click)="desbloquearUsuario(item.email)" class="btn btn-primary btn-sm btn-redo"> Desbloquear</button> </td>
+                        <td *ngIf="item.N_report<5"> <button (click)="eliminarUsuario(item.email)" class="btn btn-primary btn-sm btn-redo" disabled> Eliminar </button> </td>
+                        <td *ngIf="item.N_report>5">  <button (click)="eliminarUsuario(item.email)" class="btn btn-primary btn-sm btn-redo"> Eliminar </button> </td>
+                      </tr>
+                  
+                    </tbody>
+                </table>                       
                 </div>
 
             </div>
