--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -18,3 +18,8 @@ margin-bottom: 15%;
     background-color:white;
     font-family: 'Poppins', sans-serif
   }
+
+  model-viewer{
+    width: 700px;
+    height: 550px;
+  }
