--- a/src/app/secciones/foro/foro.component.html
+++ b/src/app/secciones/foro/foro.component.html
@@ -7,6 +7,7 @@
 </div>
 
 <div *ngIf ="!block && !cargando"  class="pagprin">
+
   <div class="todo">
   <h1 class="Titulo">Multi-Foro</h1>
   <div class="encabezado_foro">
@@ -73,19 +74,28 @@
     <button type="button" class="btn btn-azul  " data-toggle="modal" data-target="#myModal">Preguntar</button>
   </div>
   <!-- Tab panes -->
-  <div class="modal fade fondo-ng" id="myModal">
-    <div class="modal-dialog row col-12">
+  <div class="modal fade fondo-ng" id="myModal"  data-backdrop="static">
+    <div class="modal-dialog row col-12 modal-dialog-centered">
       <div class="modal-content  color-modales">
         <!-- Modal Header -->
         <div class="modal-header">
           <h3 class="modal-title txt-blanco">Agregar Pregunta</h3>
-          <button type="button" class="close" data-dismiss="modal">×</button>
+          <button type="button" class="close" data-dismiss="modal" (click)="restartPregunta()">×</button>
         </div>
         <!-- Modal body -->
         <div class="modal-body">
           <form (ngSubmit)="agregarPregunta()" [formGroup]="preguntaForm">
             <div class="form-group">
-              <textarea class="fondo-ng txt-blanco" name="comentarios" formControlName="pregunta" required placeholder=" Haz tu comentario!" cols="65" ></textarea>
+              <textarea  class="fondo-ng txt-blanco" name="comentarios" formControlName="pregunta" required placeholder=" Haz tu Pregunta!" cols="65" ></textarea>
+            </div>
+            <script>
+              function borrarArea(x) {
+              x.element.value = '';
+              console.log('ADFSDF');
+            }
+            </script>
+            <div class="row d-flex justify-content-center">
+              <p class="txt-negro">{{preguntaHecha}}</p>
             </div>
           </form>
         </div>
@@ -93,8 +103,8 @@
         <div class="modal-footer mt-2 d-flex justify-content-around mt-2">
             <form (ngSubmit)="agregarPregunta()" [formGroup]="preguntaForm">
               <label class ="txt-blanco"for="seccion">Eliga una seccion:</label>
-              <select  name="seccion" formControlName="seccion" class="custom-select color-modales txt-blanco">
-                <option value="guiones">Cortos y Guiones</option>
+              <select  name="seccion" formControlName="seccion" class="form-group custom-select color-modales txt-blanco">
+                <option value="guiones" selected>Cortos y Guiones</option>
                 <option value="animacion">Animacion 2D y 3D</option>
                 <option value="audio">Audio y Video</option>
                 <option value="virtual">Aplicacion y Entornos Virtuales</option>
@@ -105,7 +115,6 @@
               <button type="submit" class="btn fondo-blanco" ><span class="txt-btn">Publicar</span></button>
             </form>
         </div>
-
       </div>
     </div>
   </div>
@@ -126,8 +135,8 @@
                 <div *ngIf="item.usuario === nom_usua">
                   <!-- Boton Editar Pregunta -->
                   <button  type="button" class="btn btn-primary  btn-redo" data-toggle="modal"  [attr.data-target]="'#editarQ'+ item.id">Editar</button>
-                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" >
-                    <div class="modal-dialog">
+                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" data-backdrop="static" >
+                    <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content color-modales">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -205,8 +214,8 @@
                       <div *ngIf="data.usuario === nom_usua">
                         <!-- pregunta es propia-->
                         <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#editarR'+ data.id + item.id">Editar</button>
-                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}">
-                          <div class="modal-dialog">
+                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}" data-backdrop="static">
+                          <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content color-modales">
                               <!-- Modal Header -->
                               <div class="modal-header">
@@ -244,8 +253,8 @@
               <div class="agregar_respuesta">
                 <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#demo1'+ item.id">Agregar Respuesta</button>
               </div>
-              <div class="modal fade fondo-ng" id="demo1{{item.id}}">
-                <div class="modal-dialog">
+              <div class="modal fade fondo-ng" id="demo1{{item.id}}" data-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content color-modales">
                     <!-- Modal Header -->
                     <div class="modal-header">
@@ -302,8 +311,8 @@
                 <div *ngIf="item.usuario === nom_usua">
                   <!-- Boton Editar Pregunta -->
                   <button  type="button" class="btn btn-primary  btn-redo" data-toggle="modal"  [attr.data-target]="'#editarQ'+ item.id">Editar</button>
-                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" >
-                    <div class="modal-dialog">
+                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" data-backdrop="static">
+                    <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content color-modales">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -381,8 +390,8 @@
                       <div *ngIf="data.usuario === nom_usua">
                         <!-- pregunta es propia-->
                         <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#editarR'+ data.id + item.id">Editar</button>
-                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}">
-                          <div class="modal-dialog">
+                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}" data-backdrop="static">
+                          <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content color-modales">
                               <!-- Modal Header -->
                               <div class="modal-header">
@@ -420,8 +429,8 @@
               <div class="agregar_respuesta">
                 <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#demo1'+ item.id">Agregar Respuesta</button>
               </div>
-              <div class="modal fade fondo-ng" id="demo1{{item.id}}">
-                <div class="modal-dialog">
+              <div class="modal fade fondo-ng" id="demo1{{item.id}}" data-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content color-modales">
                     <!-- Modal Header -->
                     <div class="modal-header">
@@ -480,8 +489,8 @@
                 <div *ngIf="item.usuario === nom_usua">
                   <!-- Boton Editar Pregunta -->
                   <button  type="button" class="btn btn-primary  btn-redo" data-toggle="modal"  [attr.data-target]="'#editarQ'+ item.id">Editar</button>
-                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" >
-                    <div class="modal-dialog">
+                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" data-backdrop="static">
+                    <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content color-modales">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -559,8 +568,8 @@
                       <div *ngIf="data.usuario === nom_usua">
                         <!-- pregunta es propia-->
                         <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#editarR'+ data.id + item.id">Editar</button>
-                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}">
-                          <div class="modal-dialog">
+                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}" data-backdrop="static">
+                          <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content color-modales">
                               <!-- Modal Header -->
                               <div class="modal-header">
@@ -598,8 +607,8 @@
               <div class="agregar_respuesta">
                 <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#demo1'+ item.id">Agregar Respuesta</button>
               </div>
-              <div class="modal fade fondo-ng" id="demo1{{item.id}}">
-                <div class="modal-dialog">
+              <div class="modal fade fondo-ng" id="demo1{{item.id}}" data-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content color-modales">
                     <!-- Modal Header -->
                     <div class="modal-header">
@@ -658,8 +667,8 @@
                 <div *ngIf="item.usuario === nom_usua">
                   <!-- Boton Editar Pregunta -->
                   <button  type="button" class="btn btn-primary  btn-redo" data-toggle="modal"  [attr.data-target]="'#editarQ'+ item.id">Editar</button>
-                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" >
-                    <div class="modal-dialog">
+                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" data-backdrop="static">
+                    <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content color-modales">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -737,8 +746,8 @@
                       <div *ngIf="data.usuario === nom_usua">
                         <!-- pregunta es propia-->
                         <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#editarR'+ data.id + item.id">Editar</button>
-                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}">
-                          <div class="modal-dialog">
+                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}" data-backdrop="static">
+                          <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content color-modales">
                               <!-- Modal Header -->
                               <div class="modal-header">
@@ -776,8 +785,8 @@
               <div class="agregar_respuesta">
                 <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#demo1'+ item.id">Agregar Respuesta</button>
               </div>
-              <div class="modal fade fondo-ng" id="demo1{{item.id}}">
-                <div class="modal-dialog">
+              <div class="modal fade fondo-ng" id="demo1{{item.id}}" data-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content color-modales">
                     <!-- Modal Header -->
                     <div class="modal-header">
@@ -835,8 +844,8 @@
                 <div *ngIf="item.usuario === nom_usua">
                   <!-- Boton Editar Pregunta -->
                   <button  type="button" class="btn btn-primary  btn-redo" data-toggle="modal"  [attr.data-target]="'#editarQ'+ item.id">Editar</button>
-                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" >
-                    <div class="modal-dialog">
+                  <div class="modal fade fondo-ng" id="editarQ{{item.id}}" data-backdrop="static">
+                    <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content color-modales">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -914,8 +923,8 @@
                       <div *ngIf="data.usuario === nom_usua">
                         <!-- pregunta es propia-->
                         <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#editarR'+ data.id + item.id">Editar</button>
-                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}">
-                          <div class="modal-dialog">
+                        <div class="modal fade fondo-ng" id="editarR{{data.id}}{{item.id}}" data-backdrop="static"> 
+                          <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content color-modales">
                               <!-- Modal Header -->
                               <div class="modal-header">
@@ -953,8 +962,8 @@
               <div class="agregar_respuesta">
                 <button  type="button" class="btn btn-primary mt-3 btn-redo" data-toggle="modal"  [attr.data-target]="'#demo1'+ item.id">Agregar Respuesta</button>
               </div>
-              <div class="modal fade fondo-ng" id="demo1{{item.id}}">
-                <div class="modal-dialog">
+              <div class="modal fade fondo-ng" id="demo1{{item.id}}" data-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content color-modales">
                     <!-- Modal Header -->
                     <div class="modal-header">
