--- a/src/app/secciones/foro/foro.component.css
+++ b/src/app/secciones/foro/foro.component.css
@@ -155,6 +155,11 @@ color:white;
   background-color: rgba(0,0,0,0.1);
 }
 
+.txt-negro{
+  color:black;
+  font-weight: bolder;
+}
+
 
 /*-----------------------------------------Modal Nueva pregunta-----------------------------------------*/
 .form-control{
@@ -242,6 +247,10 @@ color:white;
     margin-right: 10px;
     margin-bottom: 0;
   }
+
+  .modal-dialog{
+    margin-left: 15%;
+   }
 }
 @media screen and (max-width:500px){
   .categorias{
@@ -297,7 +306,6 @@ color:white;
   margin-left: 4.5%;
 }
 .modal-dialog{
- margin-top: 17%;
  margin-left: 35%;
 }
 
